# pbvalidate

./: .travis.yml  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  main.go  main_test.go  pbvalidate.bzl
.github/: main.workflow
.github/workflows/: release.yml
testdata/: BUILD.bazel  example.proto  t2.json  t4.json
