load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/bitnami/bedrock
gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/bitnami/bedrock",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@com_github_jhump_protoreflect//desc:go_default_library",
        "@com_github_jhump_protoreflect//desc/protoparse:go_default_library",
        "@com_github_jhump_protoreflect//dynamic:go_default_library",
        "@com_github_juju_errors//:go_default_library",
        "@com_github_mkmik_stringlist//:go_default_library",
    ],
)

go_binary(
    name = "bedrock",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    data = ["//testdata"],
    embed = [":go_default_library"],
)
