load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

filegroup(
    name = "testdata",
    srcs = glob(["*"]),
    visibility = ["//visibility:public"],
)

proto_library(
    name = "foo_proto",
    srcs = ["example.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "foo_go_proto",
    importpath = "github.com/bitnami/bedrock/testdata",
    proto = ":foo_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":foo_go_proto"],
    importpath = "github.com/bitnami/bedrock/testdata",
    visibility = ["//visibility:public"],
)
